tests/ui/intrinsics/target-feature-available-at-call-site-unknown.stderr
error: unknown target feature `definitely-not-a-feature`
  --> $DIR/target-feature-available-at-call-site-unknown.rs:12:13
   |
LL |     let _ = target_feature_available_at_call_site("definitely-not-a-feature");
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

